--- a/index.html
+++ b/index.html
@@ -1,8 +1,125 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="utf-8">
-</head>
-<body>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>айБабулька</title>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <input name="vegetables" id="garlic" type="radio">
+        <input name="vegetables" id="pepper" type="radio">
+        <input name="vegetables" id="onion" type="radio">
+        <input name="vegetables" id="cauliflower" type="radio" checked>
+        <input name="vegetables" id="tomato" type="radio">
+        <input name="vegetables" id="squash" type="radio">
+        <input name="vegetables" id="pumpkin" type="radio">
+
+        <input name="recept" id="recept-1" type="radio">
+        <input name="recept" id="recept-2" type="radio">
+        <input name="recept" id="recept-3" type="radio">
+        <input name="recept" id="recept-4" type="radio" checked>
+        <input name="recept" id="recept-5" type="radio">
+        <input name="recept" id="recept-6" type="radio">
+        <input name="recept" id="recept-7" type="radio">
+        <main>
+            <article class="garlic">
+                <label for="garlic" class="vegetable garlic">
+                    <img src="img/1.jpg" title="garlic"
+                        alt="garlic">
+                <label for="recept-1" class="recepts">
+                    РЕЦЕПТ
+                </label>
+                </label>
+
+            </article>
+            <article class="pepper">
+                <label for="pepper" class="vegetable pepper">
+                    <img src="img/2.jpg" title="pepper"
+                        alt="pepper">
+                <label for="recept-2" class="recepts">
+                    РЕЦЕПТ
+                </label>
+                </label>
+            </article>
+            <article class="onion">
+                <label for="onion" class="vegetable onion">
+                    <img src="img/3.jpg" title="onion"
+                        alt="onion">
+                <label for="recept-3" class="recepts">
+                    РЕЦЕПТ
+                </label>
+                </label>
+            </article>
+            <article class="cauliflower">
+                <label for="cauliflower" class="vegetable cauliflower">
+                    <img src="img/4.jpg" title="cauliflower"
+                        alt="cauliflower">
+                <label for="recept-4" class="recepts">
+                    РЕЦЕПТ
+                </label>
+                </label>
+                <div class="cuisine">
+                    <div class="product">
+                        <ul>Продукты</ul>
+                        <li>Цветная капуста - 1 кг</li>
+                        <li>Мука - 0,5 стакана</li>
+                        <li>Яйца - 2 шт.</li>
+                        <li>Разрыхлитель - 0,25 ч. л.</li>
+                        <li>Соль - по вкусу</li>
+                        <li>Масло растительное - для жарки</li>
+                    </div>
+                    <div class="insruction">
+                        <p>Инструкция</p>
+                        <ol>
+                            <li>Цветную капусту хорошо вымыть и разобрать на очень
+                            маленькие кусочки, примерно по 2 см.</li>
+                            <li>В большую миску налить холодную воду, добавить соли,
+                            чтобы получился хорошо соленый рассол. Выложить в эту
+                            соленую воду капусту. Оставить на 30 минут.</li>
+                            <li>Затем откинуть капусту на дуршлаг, чтобы хорошо
+                            стекла жидкость.</li>
+                            <li>Измельчить капусту до мелкой крошки любым удобным
+                            вам способом: через мясорубку, блендером или
+                            комбайном с ножами.</li>
+                            <li>Добавить в капусту яйца, муку,
+                            разрыхлитель и примерно 0,75 ч. л. соли.</li>
+                            <li>В сковороде разогреть пару столовых
+                            ложек растительного масла, выложить на
+                            сковороду оладьи, примерно 1 ст. л. капустной
+                            смеси на каждый.</li>
+                            <li>Жарить до золотистости, примерно 2-3
+                            минуты с каждой стороны.</li>
+                        </ol>
+                    </div>
+                </div>
+            </article>
+            <article class="tomato">
+                <label for="tomato" class="vegetable tomato">
+                    <img src="img/5.jpg" title="tomato"
+                        alt="tomato">
+                <label for="recept-5" class="recepts">
+                    РЕЦЕПТ
+                </label>
+                </label>
+            </article>
+            <article class="squash">
+                <label for="squash" class="vegetable squash">
+                    <img src="img/6.jpg" title="squash"
+                        alt="squash">
+                <label for="recept-6" class="recepts">
+                    РЕЦЕПТ
+                </label>
+                </label>
+            </article>
+            <article class="pumpkin">
+                <label for="pumpkin" class="vegetable pumpkin">
+                    <img src="img/7.jpg" title="pumpkin"
+                        alt="pumpkin">
+                <label for="recept-7" class="recepts">
+                    РЕЦЕПТ
+                </label>
+                </label>
+            </article>
+        </main>
+    </body>
 </html>
